TestSuite/PascalABCTests/errors/err0341_multiple_where.pas
procedure p2<T1,T2,T3>(a: T1; b: T2; c: T3); where T1, T2: record; where T3: class;
begin
  
end;
begin
  p2(2, 4, 6);
end.